fix more problems on mobile

--- a/examples/server/webui/src/styles.css
+++ b/examples/server/webui/src/styles.css
@@ -12,7 +12,7 @@
 }
 
 .show-on-hover {
-  @apply opacity-0 group-hover:opacity-100;
+  @apply md:opacity-0 md:group-hover:opacity-100;
 }
 .btn-mini {
   @apply cursor-pointer hover:shadow-md;
